# agentic_product_analyst

./: .env  .env.example  EXPLORATION_GUIDE.md  GETTING_STARTED.md  README.md  explore_agents.py  explore_vector_store.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
data/mock_warehouse/: conversions.csv  search_clicks.csv  search_events.csv  sessions.csv  users.csv
docs/: OBSERVABILITY_AND_EVALS.md
evals/: datasets.py  test_deterministic.py  test_llm_components.py  test_pipeline.py
knowledge_base/company_docs/: ai_search_prd.md  search_analytics_spec.md
knowledge_base/industry_standards/: search_benchmarks.md
src/: __init__.py
src/agents/: __init__.py  base_agent.py  context_discovery.py  success_framework.py
src/api/: routes.py
src/core/: __init__.py  config.py  llm_client.py  models.py  observability.py
src/deterministic/: __init__.py  database_explorer.py  grain_detector.py
src/mcp/: __init__.py  server.py
src/orchestrator/: __init__.py  pipeline.py
src/rag/: __init__.py  chunker.py  indexer.py  retriever.py  vector_store.py
